<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.lihat_lihat.layout_pinterest.MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:src="@drawable/atas" />
    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/katalog"
        android:textSize="13sp"
        android:textStyle="italic|bold"
        android:textAlignment="center"/>
    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#D4D7D9"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/alamat_email"
        android:layout_marginBottom="8dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lanjut_dengan_email"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:textStyle="normal"
        android:layout_marginBottom="12dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lanjut_dengan_facebook"
        android:background="@color/colorPrimaryDark"
        android:textColor="#FFFFFF"
        android:textStyle="normal"
        android:layout_marginBottom="8dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lanjut_dengan_google"
        android:background="@color/colorblue"
        android:textColor="#FFFFFF"
        android:textStyle="normal"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/kebijakan"
            android:gravity="center"
            android:textStyle="normal"
            android:textSize="11sp"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</LinearLayout>
